Service (WAR) and tests working